--- a/app-deployment-blue.yml
+++ b/app-deployment-blue.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: bankapp
-        image: anikethulule/bankapp:blue # Adjust the image tag for the blue version
+        image: aniket1805/bankapp:blue # Adjust the image tag for the blue version
         ports:
         - containerPort: 8080
         env:
