--- a/app-deployment-green.yml
+++ b/app-deployment-green.yml
@@ -16,7 +16,8 @@ spec:
     spec:
       containers:
       - name: bankapp
-        image: aniket1805/bankapp:${TAG} # Adjust the image tag for the green version
+        image: aniket1805/bankapp:green # Adjust the image tag for the green version
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
         env:
