--- a/app-deployment-blue.yml
+++ b/app-deployment-blue.yml
@@ -17,6 +17,7 @@ spec:
       containers:
       - name: bankapp
         image: aniket1805/bankapp:blue # Adjust the image tag for the blue version
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
         env:
